fixed notifications z-index

--- a/client/less/style.less
+++ b/client/less/style.less
@@ -60,7 +60,7 @@ body {
 
 
 .alertify-logs {
-  z-index: 10000;
+  z-index: 20000;
 }
 
 .scroll-handle {
